--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,30 @@
     transform: rotate(360deg);
   }
 }
+
+h1 {
+  color: #878787;
+  font-size: 40px;
+  font-weight: 100px;
+  line-height: 28px;
+  margin-bottom: 0;
+}
+
+#description {
+  margin: 0 auto;
+}
+
+ul {
+  margin: 0px;
+  padding: 0px;
+}
+
+li {
+  list-style: none;
+  margin: 0;
+  color: rgb (135, 135, 135);
+}
+
+li:first-letter {
+  text-transform: capitalize;
+}
